# C-datetimetz-converter

./: README.md
datetimetz_converter_lib/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
datetimetz_converter_lib/doc/: Makefile  Makefile.in  datetimetz-converter-lib.sum  site.exp
datetimetz_converter_lib/doc/datetimetz-converter-lib/: datetimetz-converter-lib.tag
datetimetz_converter_lib/doc/datetimetz-converter-lib/html/: LinkDef_8h.html  LinkDef_8h_source.html  config_8h.html  config_8h_source.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  globals.html  globals_defs.html  globals_func.html  group__datetimetz__converter.html  group__datetimetz__converter.js  group__datetimetz__converter__demo.html  group__datetimetz__converter__filter.html  group__datetimetz__converter__filter.js  group__datetimetz__converter__helper.html  group__datetimetz__converter__verifier.html  group__datetimetz__converter__verifier.js  index.html  libdatetimetz__converter__assert_8c.html  libdatetimetz__converter__assert_8c.js  libdatetimetz__converter__assert_8c_source.html  libdatetimetz__converter__assert_8h.html  libdatetimetz__converter__assert_8h.js  libdatetimetz__converter__assert_8h_source.html  libdatetimetz__converter__consistency_8c.html  libdatetimetz__converter__consistency_8c.js  libdatetimetz__converter__consistency_8c_source.html  libdatetimetz__converter__consistency_8h.html  libdatetimetz__converter__consistency_8h.js  libdatetimetz__converter__consistency_8h_source.html  libdatetimetz__converter__epoch_8c.html  libdatetimetz__converter__epoch_8c.js  libdatetimetz__converter__epoch_8c_source.html  libdatetimetz__converter__epoch_8h.html  libdatetimetz__converter__epoch_8h.js  (+94 more)
datetimetz_converter_lib/doc/datetimetz-converter-lib/man/man3/: LinkDef.h.3  _usr_local_oracle_lib_datetimetz_converter_lib_include_.3  config.h.3  (+43 more)
datetimetz_converter_lib/doc/datetimetz-converter-lib/rtf/: dir_59425e443f801f1f2fd8bbe4959a3ccf.rtf  dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  dir_d44c64559bbebec7f509842c48db8b23.rtf  refman.rtf
datetimetz_converter_lib/include/: LinkDef.h  Makefile.am  Makefile.in  config.h  libdatetimetz_converter_assert.h  libdatetimetz_converter_consistency.h  libdatetimetz_converter_epoch.h  libdatetimetz_converter_iso8601assert.h  libdatetimetz_converter_iso8601verifier.h  libdatetimetz_converter_prereqs.h  libdatetimetz_converter_timestampverifier.h  libdatetimetz_converter_tzanytype.h  libdatetimetz_converter_tztimeoffset.h
datetimetz_converter_lib/src/: Makefile.am  Makefile.in  libdatetimetz_converter_assert.c  libdatetimetz_converter_consistency.c  libdatetimetz_converter_epoch.c  libdatetimetz_converter_iso8601assert.c  libdatetimetz_converter_iso8601verifier.c  libdatetimetz_converter_prereqs.c  libdatetimetz_converter_timestampverifier.c  libdatetimetz_converter_tzanytype.c  libdatetimetz_converter_tztimeoffset.c
datetimetz_converter_lib/tests/: Makefile.am  Makefile.in  testtzconvert-2timeoffset.c  testtzconvert-DST-Berlin.c  testtzconvert-DST-CEST.c  testtzconvert-DST-CET.c  testtzconvert-DST-EST.c  testtzconvert-DST-EST5EDT.c  testtzconvert-DST-NewYork.c  testtzconvert-DST-tzdata2015e.c  testtzconvert-GMToffset.c  testtzconvert-UTC.c  testtzconvert-WrongParameters.c  testtzconvert-WrongTimestamps.c  testtzconvert-fromAnd2timeoffset.c  testtzconverter-memleaks.c  testtzconverter-memleaks.sh.am  testtzconverter-nomemleaks.c  testtzconverter-nomemleaks.sh.am
datetimetz_converter_libhelper/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  doxygen.cfg
datetimetz_converter_libhelper/doc/: Makefile  Makefile.am
datetimetz_converter_libhelper/doc/datetimetz-converter-libhelper/: datetimetz-converter-libhelper.tag
datetimetz_converter_libhelper/doc/datetimetz-converter-libhelper/html/: annotated.html  annotated.js  classes.html  config_8h.html  config_8h.js  config_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  libassert__custom_8c.html  libassert__custom_8c.js  libassert__custom_8c_source.html  libassert__custom_8h.html  libassert__custom_8h.js  libassert__custom_8h_source.html  libdatetimetz__converter__dataparsetimestamps_8c.html  libdatetimetz__converter__dataparsetimestamps_8c.js  libdatetimetz__converter__dataparsetimestamps_8c_source.html  libdatetimetz__converter__dataparsetimestamps_8h.html  libdatetimetz__converter__dataparsetimestamps_8h_source.html  libdatetimetz__converter__datatypes_8h.html  libdatetimetz__converter__datatypes_8h.js  libdatetimetz__converter__datatypes_8h_source.html  libdatetimetz__converter__libhelper_8h.html  libdatetimetz__converter__libhelper_8h_source.html  libdatetimetz__converter__parameter_8h.html  libdatetimetz__converter__parameter_8h.js  libdatetimetz__converter__parameter_8h_source.html  libdatetimetz__converter__timestamptzformat_8c.html  libdatetimetz__converter__timestamptzformat_8c_source.html  libdatetimetz__converter__timestamptzformat_8h.html  libdatetimetz__converter__timestamptzformat_8h_source.html  (+16 more)
datetimetz_converter_libhelper/doc/datetimetz-converter-libhelper/rtf/: dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  dir_d44c64559bbebec7f509842c48db8b23.rtf  refman.rtf
datetimetz_converter_libhelper/include/: Makefile.am  config.h  config.h.in  libassert_custom.h  libdatetimetz_converter_dataparsetimestamps.h  libdatetimetz_converter_datatypes.h  libdatetimetz_converter_parameter.h  libdatetimetz_converter_timestamptzformat.h  libregex_custom.h  libtrace.h
datetimetz_converter_libhelper/src/: Makefile.am  libassert_custom.c  libdatetimetz_converter_dataparsetimestamps.c  libregex_custom.c  libtrace.c
(+73 files in other folders)
