
BASIC_LIBS = libdatetimetz_converter_lib.h

CONSISTENCY_LIBS = 
CONSISTENCY_LIBS += libdatetimetz_converter_timestampverifier.h
CONSISTENCY_LIBS += libdatetimetz_converter_iso8601verifier.h
CONSISTENCY_LIBS += libdatetimetz_converter_iso8601assert.h
CONSISTENCY_LIBS += libdatetimetz_converter_assert.h

CONVERTER_LIBS =
CONVERTER_LIBS += libdatetimetz_converter_epoch.h
CONVERTER_LIBS += libdatetimetz_converter_tzanytype.h

FILTER_LIBS =
FILTER_LIBS += libdatetimetz_converter_tztimeoffset.h

pkginclude_HEADERS= $(BASIC_LIBS) $(CONSISTENCY_LIBS) $(CONVERTER_LIBS) $(FILTER_LIBS)

#nobase_pkginclude_HEADERS

