
HELPER_LIBS =
HELPER_LIBS += libassert_custom.h 
HELPER_LIBS += libregex_custom.h 
HELPER_LIBS += libtrace.h

FORMAT_LIBS =
FORMAT_LIBS += libdatetimetz_converter_datatypes.h
FORMAT_LIBS += libdatetimetz_converter_parameter.h 
FORMAT_LIBS += libdatetimetz_converter_dataparsetimestamps.h
FORMAT_LIBS += libdatetimetz_converter_timestamptzformat.h

pkginclude_HEADERS=$(HELPER_LIBS) $(FORMAT_LIBS)

#nobase_pkginclude_HEADERS

